Fixed an isse where on small screens i removed the gutter from all rows cause issues on landing page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,9 +552,9 @@ footer .logo {
 }
 
 @media (max-width: 767px) {
-    .row {
+    /* .row {
         --bs-gutter-x: 0;
-    }
+    } */
 
     .hvr-underline-from-center:hover::before,
     .hvr-underline-from-center:focus::before {
